--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,9 @@ defaults:
   values:
     layout: page
 permalink: pretty
+- scope:
+    path: ''
+    type: projects
+  values:
+    layout: page
+permalink: pretty
